ODT: supprime le 1er <text:p/> vide et réutilise pour le 1er contenu; stop paragraphes vides sur lignes blanches; meta ODF (titre/sujet/auteur/co-auteurs/mots-clés/langue/société/commentaires)